<resources>
    <string name="app_name">Prayer Time</string>
    <string name="text_home">Home</string>
    <string name="text_pray">Pray</string>
    <string name="text_quran">Qur\'an</string>
    <string name="text_profile">Profile</string>
    <string name="text_prayer_times">Prayer Times</string>
    <string name="text_next_prayer">Next Prayer</string>
    <string name="symbol_bullet">•</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="msg_permission_denied">Permission denied</string>
    <string name="text_stop">Stop</string>
    <string name="msg_error_gps_disable">Your location settings is set to Off, Please enable location to use this features</string>
    <string name="text_unknown">Unknown</string>
    <string name="text_monday">Senin</string>
    <string name="text_tuesday">Selasa</string>
    <string name="text_wednesday">Rabu</string>
    <string name="text_thursday">Kamis</string>
    <string name="text_friday">Jum\'at</string>
    <string name="text_saturday">Sabtu</string>
    <string name="text_sunday">Minggu</string>
    <string-array name="title_prayer_time">
        <item>Imsak</item>
        <item>Fajr</item>
        <item>Sunrise</item>
        <item>Dhuhr</item>
        <item>Asr</item>
        <item>Sunset</item>
        <item>Maghrib</item>
        <item>Isha</item>
    </string-array>
    <string-array name="month_hijri">
        <item>Muharam</item>
        <item>Safar</item>
        <item>Rabi\'ul Awal</item>
        <item>Rabi\'ul Akhir</item>
        <item>Jumadil Awal</item>
        <item>Jumadil Akhir</item>
        <item>Rajab</item>
        <item>Sya\'ban</item>
        <item>Ramadhan</item>
        <item>Syawal</item>
        <item>Dzulkaidan</item>
        <item>Dzulhijjah</item>
    </string-array>
</resources>